--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
     "reselect": "^4.0.0",
     "underscore": "^1.9.1"
   },
